@@ -105,6 +105,7 @@
     * 1066 Implemented Dashboard Designer...
     * 1392 WATO Folder filter: show only the paths a user is allowed to see
     * 1398 Allow to spread times of next check when rescheduling...
+    * 1405 Checkbox for settings downtimes on the hosts of the selected services...
     * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
     * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
     * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...
